Abstract java memory options into separate class.
I add JavaConfiguration class which enable to configure java opts options.
It is possible to overvrite targeted ENV variable for Java opts, for
example Tomcat and Karaf containers.